initial rest interface